--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,17 @@
 .rectangle1 {
 	position: absolute;
 	height: 1844px;
-	width: 153px;
+	width: 152.8px;
 	top: 0;
 	background: #90f9e5;
 	z-index: 2;
-	left: 851px;
+	left: 923px;
 }
 
 .rectangle2 {
 	position: absolute;
-	top: 2200px;
-	left: 385px;
+	top: 2029px;
+	left: 363px;
 	background: #90f9e5;
 	height: 1844px;
 	width: 153px;
@@ -24,7 +24,7 @@
 
 .rectangle3 {
 	position: absolute;
-	width: 1076px;
+	width: 1109px;
 	height: 76px;
 	top: 800px;
 	background: #ffd500;
@@ -33,7 +33,7 @@
 .header {
 	position: relative;
 	display: flex;
-	margin-left: 12.3%;
+	left: 176px;
 	width: 1087px;
 	height: 80px;
 	top: 75px;
@@ -65,27 +65,27 @@
 .mainNavigation-item1 {
 	position: absolute;
 	top: 31px;
-	left: 27.7%;
+	left: 300.8px;
 }
 
 .mainNavigation-item2 {
 	position: absolute;
 	top: 31px;
-	left: 45.6%;
+	left: 494.8px;
 
 }
 
 .mainNavigation-item3 {
 	position: absolute;
 	top: 31px;
-	left: 64.1%;
+	left: 693px;
 
 }
 
 .buttonShop {
 	position: absolute;
 	top: 11px;
-	left: 85.9%;
+	left: 934px;
 	width: 154px;
 	height: 54px;
 	border: 6px #FFD500 solid;
@@ -104,23 +104,18 @@
 }
 
 .history {
-	position: absolute;
+	position: relative;
 	width: 100%;
-	height: 381px;
-	top: 280px;
+	/* height: 329px; */
+	top: 300px;
 }
-
-.historyContainer {
-	position: absolute;
-	margin-left: 12.3%;
-	height: 381px;
-}
-
 .bikeContainer {
 	position: absolute;
-	margin-top: 34.22px;
-	width: 527px;
-	height: 346.78px;
+
+	top: 0;
+	left: 176.2px;
+	width: 525px;
+	height: 329px;
 	z-index: 4;
 }
 
@@ -130,31 +125,33 @@
 }
 
 .historyTextContainer {
-	position: relative;
-	width: 797px;
-	height: 260px;
+	position: absolute;
+	height: 222px;
 	top: 0;
-	left: 467px;
+	right: 	0;
+	left: 642.2px;
 	background: #FFD500;
 	z-index: 3;
 }
 
 .historyText {
 	position: absolute;
-	width: 527px;
-	height: 234px;
-	top: 80px;
-	left: 93px;
-	margin-right: 177px;
+	top: 92px;
+	left: 736.2px;
+	right: 177px;
+	width: 	525px;
+	height: 171px;
 	color: #23282F;
 	font-family: 'JosefinSans-Regular';
-	font-size: 24px;
+	font-size: 20px;
+	text-align: justify;
+	line-height: 1.2;
 	z-index: 4;
 }
 
 .featuresContainer {
 	position: absolute;
-	top: 840px;
+	top: 813px;
 	height: 789px;
 	width: 100%;
 	z-index: 4;
@@ -164,22 +161,172 @@
 	position: relative;
 	width: 900px;
 	height: 100%;
-	left: 270px;
-	right: 270px;
+	left: 345px;
 }
 
-
-.titleContains {
-	position: relative;
-	left: 187px;
-}
 
 .titleTypeContains {
-	position: absolute;	
-	font-family: 'JosefinSans-Regular'
+	position: relative;	
+	height: 53px;
+	width: 200px;
+	left: 271px;
+	font-family: 'Carosello-Regular';
+	z-index: 4;
 }
 
 .titleType {
-	display: block;	
+	position: absolute;
+	font-size: 36px;
+	top: 0;
+	left: 0;
+	color: #82FADE;	
+}
+
+.titleFeatureContains{
+	position: absolute;
+	width: 525px;
+	height: 144px;
+	left: 97px;
+	top: 2px;
+	font-family: 'Gorgeous-SuperBlack';
+	z-index: 5;
+}
+
+.titleFeature {
 	position: absolute;	
+	top: 15px;
+	left:0;
+	font-size: 120px;
+	font-weight: 400;
+	text-transform: uppercase;
+	color: #30343F;
+	font-style: normal;
+	letter-spacing: 7.5px;	
+}
+
+.bikeFeatureContains {
+	position: relative;
+	width: 749.9px;
+	height: 469px;
+	top: 224px;
+	left: 0;
+}
+
+.bikeFeatureContains-img {
+
+	width: 100%;
+	height: 100%;
+}
+
+.details {
+	position: absolute;
+	background: #F53854;
+	width: 22px;
+	height: 21px;
+	border-radius: 50%;
+	text-align: center;
+	border: solid 5px #FFF;
+	box-shadow: 0 0 8px rgba(0, 0, 0, 0.7);
+	color: white;
+	z-index: 20;
+}
+
+.--1 {
+	top: 8px;
+	left: 221.8px;
+}
+
+.--2 {
+	top: 297px;
+	left: 128.2px;
+}
+
+.--3{
+	top: 354px;
+	left: 322px;
+}
+
+.--4 {
+	top: 99px;
+	left: 353.2px;
+}
+
+.--5 {
+	top: 49px;
+	left: 499.3px;
+}
+
+.--6 {
+	top: 212px;
+	left: 707.4px;
+}
+
+.more {
+	display: block;
+	margin-top: 1px;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 20px;
+}
+
+.presentationFixieContainer {
+	position: relative;
+	top: 1624px;
+	height: 700px;
+}
+
+.presentationFixieImageContainer1 {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 68.3%;
+	height: 426px;
+	z-index: 3;
+}
+
+.presentationFixieImageContainer2 {
+	position: absolute;
+	top: 323px;
+	left: 890px;
+	width: 550px;
+	height: 347px;
+	z-index: 5;
+
+}
+
+.presentationFixieImageContainer3 {
+	position: absolute;
+	top: 663px;
+	left: 270px;
+	width: 808px;
+	height: 386px;
+	z-index: 3;
+}
+
+.presentationImage {
+	width: 100%;
+	height: 100%;
+}
+
+.rectanglePresentationFixie {
+	position: absolute;
+	top: 615px;
+	left: 110.4px;
+	width: 1019.6px;
+	height: 134px;
+	background: #FFD500;
+	z-index: 4;
+}
+
+.presentationTextFixie {
+	position: absolute;
+	display: block;
+	top: 508px;
+	left: 147.2px;
+	width: 651px;
+	font-family: 'JosefinSans-Regular';
+	font-size: 20px;
+	text-align: justify;
+	line-height: 1.2;
+	z-index: 4;
 }
